--- a/src/components/Box/Box.scss
+++ b/src/components/Box/Box.scss
@@ -1,5 +1,6 @@
 .box-container {
-  margin: 78px auto;
+  width: 1125px;
+  margin: 78px 0;
 
   display: flex;
   flex-direction: row;
@@ -66,76 +67,104 @@
           opacity: 0.6;
         }
       }
+
+      .editable {
+        display: flex;
+        position: relative;
+
+        .btn-1 {
+          top: -100px;
+          right: -240px;
+          position: absolute;
+          margin-top: 90px;
+
+          cursor: pointer;
+          padding: 8px 0;
+
+          border: none;
+          background: #ff5630;
+          border-radius: 5px;
+          width: 205px;
+
+          font-weight: 500;
+          font-size: 16px;
+          line-height: 19px;
+          /* identical to box height */
+
+          color: #ffffff;
+
+          text-shadow: 0px 10px 40px rgba(1, 0, 39, 0.25);
+        }
+
+        .btn-2 {
+          top: -100px;
+          right: -240px;
+          position: absolute;
+          margin-top: 90px;
+
+          cursor: pointer;
+          padding: 8px 0;
+
+          border: none;
+          background: #0052cc;
+          border-radius: 5px;
+          width: 205px;
+
+          font-weight: 500;
+          font-size: 16px;
+          line-height: 19px;
+          /* identical to box height */
+
+          color: #ffffff;
+
+          text-shadow: 0px 10px 40px rgba(1, 0, 39, 0.25);
+        }
+
+        .btn-3 {
+          top: -100px;
+          right: -240px;
+          position: absolute;
+          margin-top: 90px;
+
+          cursor: pointer;
+          padding: 8px 0;
+
+          border: none;
+          background: #ffab00;
+          border-radius: 5px;
+          width: 205px;
+
+          font-weight: 500;
+          font-size: 16px;
+          line-height: 19px;
+          /* identical to box height */
+
+          color: #ffffff;
+
+          text-shadow: 0px 10px 40px rgba(1, 0, 39, 0.25);
+        }
+      }
     }
   }
+}
 
-  .btns {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
+@media screen and (max-width: 1024px) {
+  .box-container {
+    max-width: 900px;
+    width: 100%;
 
-    .btn-1 {
-      margin-top: 90px;
+    .box {
+      .speaker .editable .btn-1,
+      .speaker .editable .btn-2,
+      .speaker .editable .btn-3 {
+        top: -95px;
+        right: -200px;
 
-      cursor: pointer;
-      padding: 8px 0;
+        padding: 4px 0;
+        width: 175px;
 
-      border: none;
-      background: #ff5630;
-      border-radius: 5px;
-      width: 205px;
-
-      font-weight: 500;
-      font-size: 16px;
-      line-height: 19px;
-      /* identical to box height */
-
-      color: #ffffff;
-
-      text-shadow: 0px 10px 40px rgba(1, 0, 39, 0.25);
-    }
-
-    .btn-2 {
-      margin-top: 65px;
-
-      cursor: pointer;
-      padding: 8px 0;
-
-      border: none;
-      background: #0052cc;
-      border-radius: 5px;
-      width: 205px;
-
-      font-weight: 500;
-      font-size: 16px;
-      line-height: 19px;
-      /* identical to box height */
-
-      color: #ffffff;
-
-      text-shadow: 0px 10px 40px rgba(1, 0, 39, 0.25);
-    }
-
-    .btn-3 {
-      margin-top: 70px;
-
-      cursor: pointer;
-      padding: 8px 0;
-
-      border: none;
-      background: #ffab00;
-      border-radius: 5px;
-      width: 205px;
-
-      font-weight: 500;
-      font-size: 16px;
-      line-height: 19px;
-      /* identical to box height */
-
-      color: #ffffff;
-
-      text-shadow: 0px 10px 40px rgba(1, 0, 39, 0.25);
+        font-size: 12px;
+      }
     }
   }
 }
