--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -8,6 +8,8 @@ nav {
   box-shadow: 0px 0px 20px rgba(56, 71, 109, 0.03);
   padding: 0;
 
+  border-bottom: 1px solid #e6e6e6;
+
   img {
     border-right: 1px solid #e6e6e6;
     padding: 30px;
